# CloudCompare

plugins/core/Standard/: CMakeLists.txt
plugins/core/Standard/qFFTFilter/: CMakeLists.txt  info.json  qFFTFilter.qrc
plugins/core/Standard/qFFTFilter/include/: qFFTFilter.h  qFFTFilterDialog.h
plugins/core/Standard/qFFTFilter/src/: qFFTFilter.cpp  qFFTFilterDialog.cpp
plugins/core/Standard/qFFTFilter/src/kissfft/: kiss_fft.c  kiss_fft.h
plugins/core/Standard/qFFTFilter/ui/: qFFTFilterDialog.ui
